Revision history for perl distribution Convos

6.48 Not Released
 - Fix catching invalid nick change #628

6.47 2021-12-28T12:32:00+0900
 - Add more rules for potentially evil svg files
   Contributor: KhanhCM
   Reference: https://huntr.dev/bounties/142c3dcc-a882-4799-949b-520be0a4d144

6.46 2021-12-28T11:27:00+0900
 - Using WHOIS instead of ISON to check if a user is online #360
 - Presenting WHOIS information in conversation #360
 - Fix joining already joined conversations

6.45 2021-12-27T22:17:00+0900
 - Add "Check for updates" button to Settings page #585
 - Trying to fix connect queue issues with Convos::Util::Queue
   * Removed connect queue logic from Convos::Core
 - Removed "queued" connection state
 - Changing the connection URL username or password will also cause a reconnect

6.44 2021-12-23T16:17:00+0900
 - Fix SASL EXTERNAL authentication

6.43 2021-12-23T14:29:00+0900
 - Add certificate fingerprint to connection form, when chosing "SASL External"
 - Add support for quotes around **bold**
 - Add is_true() function to check boolean environment variables
   for "0", "Off", "No", "false", "1", "On", "Yes" or "true".
 - Changed default SASL username to nick
 - Setting CONVOS_SYSLOG=1 will disable logging to file
 - Stop replacing " (quote) with &quot;

6.42 2021-12-21T10:00:00+0900
 - Fix resetting reconnect delay when manually updating connection settings
 - Fix not changing wanted state to "disconnected" when updating connection settings
 - Fix double line breaks inside <pre> in the CMS by changing to Text::Markdown::Hoedown
 - Fix not adding space before channel name links
 - Avoid making #123 turn into channel links, since they are often pull request numbers

6.41 2021-12-18T14:58:00+0900
 - Add support for CONVOS_ACCESS_LOG (EXPERIMENTAL)
   https://github.com/jhthorsen/mojolicious-plugin-syslog#register
 - Add support for CONVOS_SYSLOG (EXPERIMENTAL)

6.40 2021-12-13T22:32:00+0900
 - Add clear search button #631
 - Add CSRF-check to /logout #632