@@ -1,0 +1,2 @@
+<!DOCTYPE html>
+<html></html>
